Back out changeset b83d3c8ac166 (bug 460811) to try to fix bustage
UltraBlame original commit: 1a2fefd12905bbc6aae0b495c005959593b11fce

--- a/dom/src/threads/test/test_importScripts.html
+++ b/dom/src/threads/test/test_importScripts.html
@@ -219,32 +219,27 @@ javascript
 "
 >
 var
-worker
+pool
 =
-new
-Worker
-(
-"
-importScripts_worker
+navigator
 .
-js
-"
+newWorkerPool
+(
 )
 ;
-worker
+pool
 .
-onmessage
+messageListener
 =
 function
 (
-event
+message
+source
 )
 {
 switch
 (
-event
-.
-data
+message
 )
 {
 case
@@ -252,7 +247,7 @@ case
 started
 "
 :
-worker
+source
 .
 postMessage
 (
@@ -299,13 +294,14 @@ finish
 }
 }
 ;
-worker
+pool
 .
-onerror
+errorListener
 =
 function
 (
-event
+error
+source
 )
 {
 ok
@@ -319,9 +315,7 @@ error
 :
 "
 +
-event
-.
-data
+error
 )
 ;
 SimpleTest
@@ -331,6 +325,20 @@ finish
 )
 ;
 }
+var
+worker
+=
+pool
+.
+createWorkerFromURL
+(
+"
+importScripts_worker
+.
+js
+"
+)
+;
 worker
 .
 postMessage
