--- a/dom/src/threads/test/test_longThread.html
+++ b/dom/src/threads/test/test_longThread.html
@@ -218,27 +218,254 @@ text
 javascript
 "
 >
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+var
+prefs
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrefBranch
+)
+;
+/
+/
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+2
+)
+;
+var
+workerScript
+=
+"
+function
+messageListener
+(
+message
+source
+)
+{
+"
++
+"
+switch
+(
+message
+)
+{
+"
++
+"
+case
+'
+start
+'
+:
+"
++
+"
+/
+*
+do
+a
+ton
+of
+stuff
+!
+*
+/
+"
++
+"
+for
+(
+var
+i
+=
+0
+;
+i
+<
+10000000
+;
+i
++
++
+)
+{
+}
+"
++
+"
+dump
+(
+'
+done
+!
+\
+\
+n
+'
+)
+;
+"
++
+"
+/
+*
+pass
+message
+to
+source
+*
+/
+"
++
+"
+source
+.
+postMessage
+(
+'
+done
+'
+)
+;
+"
++
+"
+break
+;
+"
++
+"
+default
+:
+"
++
+"
+throw
+'
+Bad
+message
+:
+'
++
+message
+;
+"
++
+"
+}
+"
++
+"
+}
+"
++
+"
+"
+;
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
+ok
+(
+pool
+"
+Couldn
+'
+t
+get
+worker
+pool
+"
+)
+;
 const
 numThreads
 =
-5
+10
 ;
 var
 doneThreads
 =
 0
 ;
+pool
+.
+messageListener
+=
 function
-onmessage
 (
-event
+message
+source
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 switch
 (
-event
-.
-data
+message
 )
 {
 case
@@ -256,6 +483,20 @@ doneThreads
 numThreads
 )
 {
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 SimpleTest
 .
 finish
@@ -276,6 +517,20 @@ message
 "
 )
 ;
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 SimpleTest
 .
 finish
@@ -284,12 +539,30 @@ finish
 ;
 }
 }
+;
+pool
+.
+errorListener
+=
 function
-onerror
 (
-event
+error
+source
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 ok
 (
 false
@@ -301,6 +574,20 @@ error
 "
 )
 ;
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 SimpleTest
 .
 finish
@@ -308,6 +595,7 @@ finish
 )
 ;
 }
+;
 for
 (
 var
@@ -327,27 +615,12 @@ i
 var
 worker
 =
-new
-Worker
+pool
+.
+createWorker
 (
-"
-longThread_worker
-.
-js
-"
+workerScript
 )
-;
-worker
-.
-onmessage
-=
-onmessage
-;
-worker
-.
-onerror
-=
-onerror
 ;
 worker
 .
