--- a/dom/src/threads/test/test_recursion.html
+++ b/dom/src/threads/test/test_recursion.html
@@ -173,45 +173,76 @@ text
 javascript
 "
 >
-var
-worker
-=
-new
-Worker
+function
+workerScript
 (
-"
-recursion_worker
-.
-js
-"
+)
+{
+function
+recurse
+(
+)
+{
+recurse
+(
 )
 ;
-worker
+}
+this
 .
-onerror
+messageListener
 =
 function
 (
-event
+message
+source
 )
 {
-dump
+switch
 (
-event
-.
-data
-+
+message
+)
+{
+case
 "
-\
-n
+start
 "
+:
+recurse
+(
 )
 ;
+break
+;
+default
+:
+}
+}
+}
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
+pool
+.
+errorListener
+=
+function
+(
+error
+source
+)
+{
 is
 (
-event
+error
 .
-data
+message
 '
 [
 JavaScript
@@ -226,34 +257,16 @@ recursion
 file
 :
 "
-http
-:
-/
-/
-localhost
-:
-8888
+DOMWorker
+inline
 '
 +
 '
-/
-tests
-/
-dom
-/
-src
-/
-threads
-/
-tests
-/
-recursion_worker
-.
-js
+script
 "
 line
 :
-2
+4
 }
 ]
 '
@@ -266,6 +279,27 @@ finish
 )
 ;
 }
+var
+worker
+=
+pool
+.
+createWorker
+(
+"
+(
+"
++
+workerScript
++
+"
+)
+(
+)
+;
+"
+)
+;
 worker
 .
 postMessage
