--- a/dom/src/threads/test/test_simpleThread.html
+++ b/dom/src/threads/test/test_simpleThread.html
@@ -218,44 +218,338 @@ text
 javascript
 "
 >
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 var
-worker
+prefs
 =
-new
-Worker
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrefBranch
+)
+;
+/
+/
+prefs
+.
+setIntPref
 (
 "
-simpleThread_worker
+javascript
 .
-js
+options
+.
+gczeal
+"
+2
+)
+;
+var
+workerScript
+=
+"
+function
+messageListener
+(
+message
+source
+)
+{
+"
++
+"
+switch
+(
+message
+)
+{
+"
++
+"
+case
+'
+no
+-
+op
+'
+:
+"
++
+"
+break
+;
+"
++
+"
+case
+'
+start
+'
+:
+"
++
+"
+/
+*
+do
+a
+ton
+of
+stuff
+!
+*
+/
+"
++
+"
+for
+(
+var
+i
+=
+0
+;
+i
+<
+1000
+;
+i
++
++
+)
+{
+}
+"
++
+"
+/
+*
+pass
+message
+to
+source
+*
+/
+"
++
+"
+source
+.
+postMessage
+(
+'
+started
+'
+)
+;
+"
++
+"
+break
+;
+"
++
+"
+case
+'
+stop
+'
+:
+"
++
+"
+/
+*
+do
+some
+more
+stuff
+!
+*
+/
+"
++
+"
+for
+(
+var
+i
+=
+0
+;
+i
+<
+1000
+;
+i
++
++
+)
+{
+}
+"
++
+"
+/
+*
+pass
+message
+to
+self
+*
+/
+"
++
+"
+threadContext
+.
+thisThread
+.
+postMessage
+(
+'
+no
+-
+op
+'
+)
+;
+"
++
+"
+/
+*
+pass
+message
+to
+pool
+*
+/
+"
++
+"
+postMessageToPool
+(
+'
+stopped
+'
+)
+;
+"
++
+"
+break
+;
+"
++
+"
+default
+:
+"
++
+"
+throw
+'
+Bad
+message
+:
+'
++
+message
+;
+"
++
+"
+}
+"
++
+"
+}
+"
++
+"
+"
+;
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
+ok
+(
+pool
+"
+Couldn
+'
+t
+get
+worker
+pool
 "
 )
 ;
-worker
+pool
 .
-addEventListener
-(
-"
-message
-"
+messageListener
+=
 function
 (
-event
+message
+source
 )
 {
-is
-(
-event
+netscape
 .
-target
-worker
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
 )
 ;
 switch
 (
-event
-.
-data
+message
 )
 {
 case
@@ -272,13 +566,13 @@ case
 started
 "
 :
-is
-(
-gotError
-true
-)
-;
-worker
+/
+/
+pass
+message
+to
+self
+pool
 .
 postMessage
 (
@@ -289,7 +583,13 @@ op
 "
 )
 ;
-worker
+/
+/
+pass
+message
+to
+source
+source
 .
 postMessage
 (
@@ -305,6 +605,12 @@ case
 stopped
 "
 :
+/
+/
+pass
+message
+to
+worker
 worker
 .
 postMessage
@@ -314,6 +620,20 @@ no
 -
 op
 "
+)
+;
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
 )
 ;
 SimpleTest
@@ -332,12 +652,21 @@ false
 "
 Unexpected
 message
-:
 "
-+
-event
+)
+;
+prefs
 .
-data
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
 )
 ;
 SimpleTest
@@ -348,67 +677,30 @@ finish
 ;
 }
 }
-false
-)
 ;
-var
-gotError
-=
-false
-;
-worker
+pool
 .
-onerror
+errorListener
 =
 function
 (
-event
+error
+source
 )
 {
-is
-(
-event
+netscape
 .
-target
-worker
-)
-;
-is
-(
-event
+security
 .
-data
+PrivilegeManager
+.
+enablePrivilege
+(
 '
-[
-JavaScript
-Error
-:
-"
-uncaught
-exception
-:
-Bad
-message
-:
-asdf
-"
-]
+UniversalXPConnect
 '
 )
 ;
-gotError
-=
-true
-;
-worker
-.
-onerror
-=
-function
-(
-otherEvent
-)
-{
 ok
 (
 false
@@ -417,12 +709,21 @@ Worker
 had
 an
 error
-:
 "
-+
-otherEvent
+)
+;
+prefs
 .
-data
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
 )
 ;
 SimpleTest
@@ -432,14 +733,37 @@ finish
 )
 ;
 }
-}
 ;
+var
 worker
+=
+pool
+.
+createWorker
+(
+workerScript
+)
+;
+ok
+(
+worker
+"
+Couldn
+'
+t
+make
+worker
+"
+)
+;
+pool
 .
 postMessage
 (
 "
-asdf
+no
+-
+op
 "
 )
 ;
