--- a/dom/src/threads/test/test_threadErrors.html
+++ b/dom/src/threads/test/test_threadErrors.html
@@ -218,29 +218,262 @@ text
 javascript
 "
 >
-const
-expectedErrorCount
-=
-4
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
 ;
+var
+prefs
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrefBranch
+)
+;
+/
+/
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+2
+)
+;
+var
+badWorkerScripts
+=
+[
+/
+/
+Syntax
+error
+"
 function
 messageListener
 (
-event
+message
+source
 )
 {
+"
++
+"
+for
+(
+var
+i
+=
+0
+;
+i
+<
+10
+)
+{
+}
+"
++
+"
+}
+"
++
+"
+"
+/
+/
+Bad
+function
+error
+"
+function
+messageListener
+(
+message
+source
+)
+{
+"
++
+"
+foopy
+(
+)
+;
+"
++
+"
+}
+"
++
+"
+"
+/
+/
+Unhandled
+exception
+in
+body
+"
+function
+messageListener
+(
+message
+source
+)
+{
+"
++
+"
+}
+"
++
+"
+throw
+new
+Error
+(
+'
+Bah
+!
+'
+)
+;
+"
++
+"
+"
+/
+/
+Throwing
+message
+listener
+"
+function
+messageListener
+(
+message
+source
+)
+{
+"
++
+"
+throw
+'
+Bad
+message
+:
+'
++
+message
+;
+"
++
+"
+}
+"
++
+"
+"
+]
+;
+var
+expectedErrorCount
+=
+badWorkerScripts
+.
+length
+;
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
+pool
+.
+messageListener
+=
+function
+(
+message
+source
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 ok
 (
 false
 "
 Unexpected
 message
-:
 "
-+
-event
-.
-data
 )
 ;
 SimpleTest
@@ -262,21 +495,36 @@ failedWorkers
 [
 ]
 ;
-function
+pool
+.
 errorListener
+=
+function
 (
-event
+error
+source
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 if
 (
 failedWorkers
 .
 indexOf
 (
-event
-.
-target
+source
 )
 !
 =
@@ -284,6 +532,23 @@ target
 1
 )
 {
+dump
+(
+"
+Already
+seen
+worker
+:
+"
++
+source
++
+"
+\
+n
+"
+)
+;
 ok
 (
 false
@@ -296,6 +561,20 @@ from
 this
 worker
 "
+)
+;
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
 )
 ;
 SimpleTest
@@ -311,9 +590,7 @@ failedWorkers
 .
 push
 (
-event
-.
-target
+source
 )
 ;
 actualErrorCount
@@ -328,6 +605,20 @@ actualErrorCount
 expectedErrorCount
 )
 {
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 SimpleTest
 .
 finish
@@ -342,11 +633,10 @@ for
 var
 i
 =
-1
+0
 ;
 i
 <
-=
 expectedErrorCount
 ;
 i
@@ -357,32 +647,15 @@ i
 var
 worker
 =
-new
-Worker
+pool
+.
+createWorker
 (
-"
-threadErrors_worker
-"
-+
+badWorkerScripts
+[
 i
-+
-"
-.
-js
-"
+]
 )
-;
-worker
-.
-onmessage
-=
-messageListener
-;
-worker
-.
-onerror
-=
-errorListener
 ;
 worker
 .
