--- a/dom/src/threads/test/test_threadTimeouts.html
+++ b/dom/src/threads/test/test_threadTimeouts.html
@@ -218,41 +218,384 @@ text
 javascript
 "
 >
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 var
-worker
+prefs
 =
-new
-Worker
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrefBranch
+)
+;
+/
+/
+prefs
+.
+setIntPref
 (
 "
-threadTimeouts_worker
+javascript
 .
-js
+options
+.
+gczeal
+"
+2
+)
+;
+var
+workerScript
+=
+"
+var
+gTimeoutId
+;
+"
++
+"
+var
+gTimeoutCount
+=
+0
+;
+"
++
+"
+var
+gIntervalCount
+=
+0
+;
+"
++
+"
+"
++
+"
+function
+timeoutFunc
+(
+)
+{
+"
++
+"
+if
+(
++
++
+gTimeoutCount
+>
+1
+)
+{
+"
++
+"
+throw
+new
+Error
+(
+'
+Timeout
+called
+more
+than
+once
+!
+'
+)
+;
+"
++
+"
+}
+"
++
+"
+postMessageToPool
+(
+'
+timeoutFinished
+'
+)
+;
+"
++
+"
+}
+"
++
+"
+"
++
+"
+function
+intervalFunc
+(
+)
+{
+"
++
+"
+if
+(
++
++
+gIntervalCount
+=
+=
+2
+)
+{
+"
++
+"
+postMessageToPool
+(
+'
+intervalFinished
+'
+)
+;
+"
++
+"
+}
+"
++
+"
+}
+"
++
+"
+"
++
+"
+function
+messageListener
+(
+message
+source
+)
+{
+"
++
+"
+switch
+(
+message
+)
+{
+"
++
+"
+case
+'
+startTimeout
+'
+:
+"
++
+"
+gTimeoutId
+=
+setTimeout
+(
+timeoutFunc
+5000
+)
+;
+"
++
+"
+clearTimeout
+(
+gTimeoutId
+)
+;
+"
++
+"
+gTimeoutId
+=
+setTimeout
+(
+timeoutFunc
+5000
+)
+;
+"
++
+"
+break
+;
+"
++
+"
+case
+'
+startInterval
+'
+:
+"
++
+"
+gTimeoutId
+=
+setInterval
+(
+intervalFunc
+5000
+)
+;
+"
++
+"
+break
+;
+"
++
+"
+case
+'
+cancelInterval
+'
+:
+"
++
+"
+clearInterval
+(
+gTimeoutId
+)
+;
+"
++
+"
+postMessageToPool
+(
+'
+intervalCanceled
+'
+)
+;
+"
++
+"
+break
+;
+"
++
+"
+default
+:
+"
++
+"
+throw
+'
+Bad
+message
+:
+'
++
+message
+;
+"
++
+"
+}
+"
++
+"
+}
+"
++
+"
+"
+;
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
+ok
+(
+pool
+"
+Couldn
+'
+t
+get
+worker
+pool
 "
 )
 ;
-worker
+pool
 .
-onmessage
+messageListener
 =
 function
 (
-event
+message
+source
 )
 {
-is
-(
-event
+netscape
 .
-target
-worker
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
 )
 ;
 switch
 (
-event
-.
-data
+message
 )
 {
 case
@@ -260,9 +603,7 @@ case
 timeoutFinished
 "
 :
-event
-.
-target
+source
 .
 postMessage
 (
@@ -278,9 +619,7 @@ case
 intervalFinished
 "
 :
-event
-.
-target
+source
 .
 postMessage
 (
@@ -296,6 +635,20 @@ case
 intervalCanceled
 "
 :
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 SimpleTest
 .
 finish
@@ -315,6 +668,20 @@ message
 "
 )
 ;
+prefs
+.
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
+)
+;
 SimpleTest
 .
 finish
@@ -324,21 +691,27 @@ finish
 }
 }
 ;
-worker
+pool
 .
-onerror
+errorListener
 =
 function
 (
-event
+error
+source
 )
 {
-is
-(
-event
+netscape
 .
-target
-worker
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
 )
 ;
 ok
@@ -349,12 +722,21 @@ Worker
 had
 an
 error
-:
 "
-+
-event
+)
+;
+prefs
 .
-data
+setIntPref
+(
+"
+javascript
+.
+options
+.
+gczeal
+"
+0
 )
 ;
 SimpleTest
@@ -364,6 +746,28 @@ finish
 )
 ;
 }
+;
+var
+worker
+=
+pool
+.
+createWorker
+(
+workerScript
+)
+;
+ok
+(
+worker
+"
+Couldn
+'
+t
+make
+worker
+"
+)
 ;
 worker
 .
