--- a/dom/src/threads/test/test_xhr.html
+++ b/dom/src/threads/test/test_xhr.html
@@ -223,44 +223,433 @@ text
 javascript
 "
 >
+function
+workerScript
+(
+)
+{
 var
-worker
+xhr
 =
 new
-Worker
+XMLHttpRequest
 (
-"
-xhr_worker
-.
-js
-"
 )
 ;
-worker
+function
+onload
+(
+event
+)
+{
+if
+(
+event
 .
-onmessage
+target
+.
+status
+!
+=
+200
+)
+{
+var
+message
+=
+{
+type
+:
+"
+error
+"
+error
+:
+event
+.
+target
+.
+status
+}
+;
+postMessageToPool
+(
+message
+.
+toSource
+(
+)
+)
+;
+}
+var
+message
+=
+{
+type
+:
+"
+load
+"
+data
+:
+xhr
+.
+responseText
+}
+;
+postMessageToPool
+(
+message
+.
+toSource
+(
+)
+)
+;
+}
+xhr
+.
+onload
+=
+onload
+;
+xhr
+.
+addEventListener
+(
+"
+load
+"
+onload
+false
+)
+;
+xhr
+.
+removeEventListener
+(
+"
+load
+"
+onload
+false
+)
+;
+if
+(
+!
+xhr
+.
+onload
+)
+{
+var
+message
+=
+{
+type
+:
+"
+error
+"
+error
+:
+"
+Lost
+message
+listener
+!
+"
+}
+;
+postMessageToPool
+(
+message
+.
+toSource
+(
+)
+)
+;
+}
+xhr
+.
+addEventListener
+(
+"
+error
+"
+function
+(
+event
+)
+{
+var
+message
+=
+{
+type
+:
+"
+error
+"
+error
+:
+event
+.
+target
+.
+status
+}
+;
+postMessageToPool
+(
+message
+.
+toSource
+(
+)
+)
+;
+}
+false
+)
+;
+function
+onprogress
+(
+event
+)
+{
+var
+message
+=
+{
+type
+:
+"
+progress
+"
+current
+:
+event
+.
+loaded
+total
+:
+event
+.
+total
+}
+;
+postMessageToPool
+(
+message
+.
+toSource
+(
+)
+)
+;
+}
+xhr
+.
+addEventListener
+(
+"
+progress
+"
+onprogress
+false
+)
+;
+xhr
+.
+addEventListener
+(
+"
+foopety
+"
+function
+(
+event
+)
+{
+}
+false
+)
+;
+xhr
+.
+removeEventListener
+(
+"
+doopety
+"
+function
+(
+event
+)
+{
+}
+false
+)
+;
+var
+upload
+=
+xhr
+.
+upload
+;
+upload
+.
+onprogress
 =
 function
 (
 event
 )
 {
-is
+}
+;
+upload
+.
+addEventListener
+(
+"
+readystatechange
+"
+function
 (
 event
-.
-target
-worker
+)
+{
+}
+false
 )
 ;
+upload
+.
+removeEventListener
+(
+"
+readystatechange
+"
+function
+(
+event
+)
+{
+}
+false
+)
+;
+upload
+.
+addEventListener
+(
+"
+load
+"
+function
+(
+event
+)
+{
+}
+false
+)
+;
+upload
+.
+removeEventListener
+(
+"
+readystatechange
+"
+function
+(
+event
+)
+{
+}
+false
+)
+;
+this
+.
+messageListener
+=
+function
+(
+message
+source
+)
+{
+if
+(
+xhr
+.
+readystate
+>
+0
+)
+{
+throw
+"
+XHR
+already
+running
+!
+"
+;
+}
+xhr
+.
+open
+(
+"
+GET
+"
+message
+)
+;
+xhr
+.
+send
+(
+null
+)
+;
+}
+}
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
+pool
+.
+messageListener
+=
+function
+(
+message
+source
+)
+{
 var
 args
 =
 eval
 (
-event
-.
-data
+message
 )
 ;
 switch
@@ -388,23 +777,16 @@ finish
 }
 }
 ;
-worker
+pool
 .
-onerror
+errorListener
 =
 function
 (
-event
+error
+source
 )
 {
-is
-(
-event
-.
-target
-worker
-)
-;
 ok
 (
 false
@@ -416,9 +798,7 @@ error
 :
 "
 +
-event
-.
-data
+error
 )
 ;
 SimpleTest
@@ -428,6 +808,27 @@ finish
 )
 ;
 }
+var
+worker
+=
+pool
+.
+createWorker
+(
+"
+(
+"
++
+workerScript
++
+"
+)
+(
+)
+;
+"
+)
+;
 worker
 .
 postMessage
