--- a/dom/src/threads/test/test_regExpStatics.html
+++ b/dom/src/threads/test/test_regExpStatics.html
@@ -181,15 +181,164 @@ WORKER_COUNT
 =
 25
 ;
+function
+workerScript
+(
+)
+{
+var
+runCount
+=
+0
+;
+var
+timeout
+;
+this
+.
+messageListener
+=
+function
+(
+message
+source
+)
+{
+run
+(
+)
+;
+timeout
+=
+setTimeout
+(
+run
+0
+)
+;
+timeout
+=
+setTimeout
+(
+run
+5000
+)
+;
+}
+;
+function
+run
+(
+)
+{
+if
+(
+RegExp
+.
+1
+)
+{
+throw
+"
+RegExp
+.
+1
+already
+set
+!
+"
+;
+cancelTimeout
+(
+timeout
+)
+;
+}
+var
+match
+=
+/
+a
+(
+sd
+)
+f
+/
+(
+"
+asdf
+"
+)
+;
+if
+(
+!
+RegExp
+.
+1
+)
+{
+throw
+"
+RegExp
+.
+1
+didn
+'
+t
+get
+set
+!
+"
+;
+cancelTimeout
+(
+timeout
+)
+;
+}
+if
+(
++
++
+runCount
+=
+=
+3
+)
+{
+postMessageToPool
+(
+"
+done
+"
+)
+;
+}
+}
+}
+var
+pool
+=
+navigator
+.
+newWorkerPool
+(
+)
+;
 var
 doneWorkers
 =
 0
 ;
+pool
+.
+messageListener
+=
 function
-onmessage
 (
-event
+message
+source
 )
 {
 if
@@ -210,10 +359,15 @@ finish
 ;
 }
 }
+;
+pool
+.
+errorListener
+=
 function
-onerror
 (
-event
+error
+source
 )
 {
 ok
@@ -227,9 +381,7 @@ error
 :
 "
 +
-event
-.
-data
+error
 )
 ;
 SimpleTest
@@ -259,27 +411,23 @@ i
 var
 worker
 =
-new
-Worker
+pool
+.
+createWorker
 (
 "
-regExpStatics_worker
-.
-js
+(
+"
++
+workerScript
++
 "
 )
+(
+)
 ;
-worker
-.
-onmessage
-=
-onmessage
-;
-worker
-.
-onerror
-=
-onerror
+"
+)
 ;
 worker
 .
