Bug 460811 - "Bring workers up to latest spec". r+sr=jst.
UltraBlame original commit: 4fc7c6f6f45e2825ba98bd73ef9d542518cfa273

--- a/dom/src/threads/test/test_regExpStatics.html
+++ b/dom/src/threads/test/test_regExpStatics.html
@@ -181,164 +181,15 @@ WORKER_COUNT
 =
 25
 ;
-function
-workerScript
-(
-)
-{
-var
-runCount
-=
-0
-;
-var
-timeout
-;
-this
-.
-messageListener
-=
-function
-(
-message
-source
-)
-{
-run
-(
-)
-;
-timeout
-=
-setTimeout
-(
-run
-0
-)
-;
-timeout
-=
-setTimeout
-(
-run
-5000
-)
-;
-}
-;
-function
-run
-(
-)
-{
-if
-(
-RegExp
-.
-1
-)
-{
-throw
-"
-RegExp
-.
-1
-already
-set
-!
-"
-;
-cancelTimeout
-(
-timeout
-)
-;
-}
-var
-match
-=
-/
-a
-(
-sd
-)
-f
-/
-(
-"
-asdf
-"
-)
-;
-if
-(
-!
-RegExp
-.
-1
-)
-{
-throw
-"
-RegExp
-.
-1
-didn
-'
-t
-get
-set
-!
-"
-;
-cancelTimeout
-(
-timeout
-)
-;
-}
-if
-(
-+
-+
-runCount
-=
-=
-3
-)
-{
-postMessageToPool
-(
-"
-done
-"
-)
-;
-}
-}
-}
-var
-pool
-=
-navigator
-.
-newWorkerPool
-(
-)
-;
 var
 doneWorkers
 =
 0
 ;
-pool
-.
-messageListener
-=
 function
+onmessage
 (
-message
-source
+event
 )
 {
 if
@@ -359,15 +210,10 @@ finish
 ;
 }
 }
-;
-pool
-.
-errorListener
-=
 function
+onerror
 (
-error
-source
+event
 )
 {
 ok
@@ -381,7 +227,9 @@ error
 :
 "
 +
-error
+event
+.
+data
 )
 ;
 SimpleTest
@@ -411,23 +259,27 @@ i
 var
 worker
 =
-pool
+new
+Worker
+(
+"
+regExpStatics_worker
 .
-createWorker
-(
+js
 "
-(
-"
-+
-workerScript
-+
-"
-)
-(
 )
 ;
-"
-)
+worker
+.
+onmessage
+=
+onmessage
+;
+worker
+.
+onerror
+=
+onerror
 ;
 worker
 .
