--- a/content/base/test/test_header.html
+++ b/content/base/test/test_header.html
@@ -14,11 +14,9 @@ title
 >
 Test
 for
-Cross
-domain
-access
-to
-properties
+XHR
+header
+preservation
 <
 /
 title
@@ -107,42 +105,6 @@ head
 >
 <
 body
-onload
-=
-"
-setupTest
-(
-'
-http
-:
-/
-/
-example
-.
-org
-/
-tests
-/
-extensions
-/
-cookie
-/
-test
-/
-file_loadflags_inner
-.
-html
-'
-'
-example
-.
-org
-'
-5
-1
-4
-)
-"
 >
 <
 p
@@ -155,6 +117,25 @@ display
 <
 /
 p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
 >
 <
 pre
@@ -178,14 +159,119 @@ text
 /
 javascript
 "
-src
+>
+/
+*
+*
+Test
+for
+Bug
+421622
+*
+*
+/
+const
+SJS_URL
 =
 "
-file_testloadflags
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+content
+/
+base
+/
+test
+/
+header
 .
-js
+sjs
 "
->
+;
+const
+VALUE
+=
+"
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+"
+;
+var
+req
+=
+new
+XMLHttpRequest
+(
+)
+;
+req
+.
+open
+(
+"
+GET
+"
+SJS_URL
+false
+)
+;
+req
+.
+setRequestHeader
+(
+"
+SomeHeader
+"
+VALUE
+)
+;
+req
+.
+send
+(
+null
+)
+;
+is
+(
+req
+.
+responseText
+"
+SomeHeader
+:
+"
++
+VALUE
+"
+Header
+received
+by
+server
+does
+not
+match
+what
+was
+set
+"
+)
+;
 <
 /
 script
