Bug 443017: Application cache tests.  r=dcamp, sr=jst
UltraBlame original commit: d824478adb04cfb953febe34c6db2b29b0c416f9

--- a/dom/tests/mochitest/ajax/offline/foreign2.html
+++ b/dom/tests/mochitest/ajax/offline/foreign2.html
@@ -40,7 +40,7 @@ ajax
 /
 offline
 /
-simpleManifest
+foreign2
 .
 cacheManifest
 "
@@ -51,9 +51,9 @@ head
 <
 title
 >
-identical
-manifest
-test
+Foreign
+page
+2
 <
 /
 title
@@ -172,6 +172,11 @@ css
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
@@ -180,125 +185,50 @@ text
 javascript
 "
 >
-var
-gGotChecking
-=
-false
-;
-var
-gGotDownloading
-=
-false
-;
 function
-noUpdate
+manifestUpdated
 (
 )
 {
-OfflineTest
+var
+appCacheService
+=
+Components
 .
-ok
-(
-gGotChecking
+classes
+[
 "
-Should
-get
-a
-checking
-event
-"
-)
-;
-OfflineTest
+mozilla
 .
-ok
-(
-!
-gGotDownloading
-"
-Should
-not
-get
-a
-downloading
-event
-"
-)
-;
+org
 /
+network
 /
-The
-document
-that
-requested
-the
-manifest
-should
-be
-in
-the
+application
+-
 cache
-OfflineTest
+-
+service
+;
+1
+"
+]
 .
-checkCache
+getService
 (
-window
+Components
 .
-location
+interfaces
 .
-href
-true
+nsIApplicationCacheService
 )
 ;
-OfflineTest
+var
+foreign2cache
+=
+appCacheService
 .
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
-true
-)
-;
-OfflineTest
-.
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-MochiKit
-/
-packed
-.
-js
-"
-true
-)
-;
-OfflineTest
-.
-checkCache
+chooseApplicationCache
 (
 "
 http
@@ -321,11 +251,114 @@ ajax
 /
 offline
 /
-offlineTests
+foreign2
 .
-js
+html
 "
-true
+)
+;
+OfflineTest
+.
+ok
+(
+foreign2cache
+"
+Foreign
+2
+cache
+present
+choosed
+for
+foreign2
+.
+html
+"
+)
+;
+OfflineTest
+.
+is
+(
+foreign2cache
+.
+groupID
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign2
+.
+cacheManifest
+"
+)
+var
+foreign1cache
+=
+appCacheService
+.
+getActiveCache
+(
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign1
+.
+cacheManifest
+"
+)
+;
+OfflineTest
+.
+ok
+(
+foreign1cache
+"
+Foreign
+1
+cache
+loaded
+"
+)
+;
+foreign1cache
+.
+discard
+(
 )
 ;
 OfflineTest
@@ -342,294 +375,242 @@ finish
 ;
 }
 function
-manifestUpdated
+onLoaded
 (
+)
+{
+var
+appCacheService
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+network
+/
+application
+-
+cache
+-
+service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIApplicationCacheService
+)
+;
+var
+foreign1cache
+=
+appCacheService
+.
+getActiveCache
+(
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign1
+.
+cacheManifest
+"
+)
+;
+OfflineTest
+.
+ok
+(
+foreign1cache
+"
+Foreign
+1
+cache
+loaded
+"
+)
+;
+var
+foreign2cache
+=
+appCacheService
+.
+getActiveCache
+(
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign2
+.
+cacheManifest
+"
+)
+;
+OfflineTest
+.
+ok
+(
+!
+foreign2cache
+"
+Foreign
+2
+cache
+not
+present
+"
+)
+;
+foreign1cache
+=
+appCacheService
+.
+chooseApplicationCache
+(
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign2
+.
+html
+"
+)
+;
+OfflineTest
+.
+ok
+(
+!
+foreign1cache
+"
+foreign2
+.
+html
+not
+choosed
+from
+foreign1
+cache
+"
+)
+;
+try
+{
+OfflineTest
+.
+ok
+(
+applicationCache
+.
+status
+=
+=
+Components
+.
+interfaces
+.
+nsIDOMOfflineResourceList
+.
+UNCACHED
+"
+there
+is
+no
+associated
+application
+cache
+"
+)
+;
+}
+catch
+(
+ex
 )
 {
 OfflineTest
 .
 ok
 (
-gGotChecking
+false
 "
-Should
-get
-a
-checking
-event
-"
-)
-;
-OfflineTest
+applicationCache
 .
-ok
-(
-gGotDownloading
-"
-Should
-get
-a
-downloading
-event
-"
-)
-;
-/
-/
-The
-manifest
-itself
-should
-be
-in
-the
-cache
-OfflineTest
-.
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-ajax
-/
-offline
-/
-simpleManifest
-.
-cacheManifest
-"
-true
-)
-;
-/
-/
-The
-document
-that
-requested
-the
-manifest
-should
-be
-in
-the
-cache
-OfflineTest
-.
-checkCache
-(
-window
-.
-location
-.
-href
-true
-)
-;
-/
-/
-The
-entries
-from
-the
-manifest
-should
-be
-in
-the
-cache
-OfflineTest
-.
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
-true
-)
-;
-OfflineTest
-.
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-MochiKit
-/
-packed
-.
-js
-"
-true
-)
-;
-OfflineTest
-.
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-ajax
-/
-offline
-/
-offlineTests
-.
-js
-"
-true
-)
-;
-/
-/
-The
-bad
-entries
-from
-the
-manifest
-should
+status
+must
 not
-be
-in
-the
-cache
-OfflineTest
-.
-checkCache
-(
+throw
+an
+exception
 "
-https
-:
-/
-/
-localhost
-:
-8888
-/
-MochiKit
-/
-packed
-.
-js
-"
-false
 )
 ;
-OfflineTest
-.
-checkCache
-(
-"
-bad
-:
-/
-uri
-/
-invalid
-"
-false
-)
-;
-/
-/
-Now
-make
-sure
-applicationCache
-.
-update
-(
-)
-does
-what
-we
-expect
-.
-applicationCache
-.
-oncached
-=
-OfflineTest
-.
-failEvent
-;
-applicationCache
-.
-onnoupdate
-=
-OfflineTest
-.
-priv
-(
-noUpdate
-)
-;
-gGotChecking
-=
-false
-;
-gGotDownloading
-=
-false
-;
-applicationCache
-.
-update
-(
-)
-;
+}
 }
 if
 (
@@ -650,47 +631,19 @@ failEvent
 ;
 applicationCache
 .
+onupdateready
+=
+OfflineTest
+.
+failEvent
+;
+applicationCache
+.
 onnoupdate
 =
 OfflineTest
 .
 failEvent
-;
-applicationCache
-.
-onudpateready
-=
-OfflineTest
-.
-failEvent
-;
-applicationCache
-.
-onchecking
-=
-function
-(
-)
-{
-gGotChecking
-=
-true
-;
-}
-;
-applicationCache
-.
-ondownloading
-=
-function
-(
-)
-{
-gGotDownloading
-=
-true
-;
-}
 ;
 applicationCache
 .
@@ -704,12 +657,6 @@ manifestUpdated
 )
 ;
 }
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 <
 /
 script
@@ -720,6 +667,19 @@ head
 >
 <
 body
+onload
+=
+"
+OfflineTest
+.
+priv
+(
+onLoaded
+)
+(
+)
+;
+"
 >
 <
 /
