--- a/dom/tests/mochitest/ajax/offline/test_foreign.html
+++ b/dom/tests/mochitest/ajax/offline/test_foreign.html
@@ -40,7 +40,7 @@ ajax
 /
 offline
 /
-badManifestMagic
+foreign1
 .
 cacheManifest
 "
@@ -51,9 +51,8 @@ head
 <
 title
 >
-bad
-manifest
-magic
+Foreign
+test
 <
 /
 title
@@ -172,6 +171,11 @@ css
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
@@ -180,114 +184,155 @@ text
 javascript
 "
 >
-var
-gGotChecking
-=
-false
-;
+/
+*
+*
+*
+This
+test
+loads
+a
+manifest
+that
+contains
+as
+an
+explicit
+entry
+*
+foreign2
+.
+html
+page
+.
+After
+manifest
+is
+cached
+and
+presence
+of
+the
+*
+foreign2
+.
+html
+page
+is
+checked
+we
+redirect
+to
+foreign2
+.
+html
+*
+page
+.
+Then
+the
+test
+continues
+inside
+that
+page
+as
+follows
+:
+*
+On
+load
+of
+foreign2
+.
+html
+we
+check
+there
+is
+no
+associated
+cache
+*
+because
+the
+foreign2
+.
+html
+page
+was
+marked
+as
+FOREIGN
+in
+foreign1
+cache
+.
+*
+After
+the
+foreign2
+manifest
+is
+updated
+we
+check
+foreign2
+cache
+is
+*
+chosen
+by
+foreign
+.
+html
+page
+.
+*
+/
 function
-handleError
+manifestUpdated
 (
 )
 {
-OfflineTest
+var
+appCacheService
+=
+Components
 .
-ok
-(
-gGotChecking
+classes
+[
 "
-Expected
-checking
-event
-"
-)
-;
-OfflineTest
+mozilla
 .
-ok
-(
-true
-"
-Expected
-error
-event
-"
-)
-;
+org
 /
+network
 /
-These
-items
-are
-listed
-in
-the
-manifest
-but
-the
-error
-should
-have
-/
-/
-prevented
-them
-from
-being
-committed
-to
-the
+application
+-
 cache
+-
+service
+;
+1
+"
+]
 .
-OfflineTest
-.
-checkCache
+getService
 (
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
+Components
 .
-js
-"
-false
+interfaces
+.
+nsIApplicationCacheService
 )
 ;
-OfflineTest
+foreign1cache
+=
+appCacheService
 .
-checkCache
-(
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-MochiKit
-/
-packed
-.
-js
-"
-false
-)
-;
-OfflineTest
-.
-checkCache
+chooseApplicationCache
 (
 "
 http
@@ -310,26 +355,98 @@ ajax
 /
 offline
 /
-offlineTests
+foreign2
 .
-js
+html
 "
-false
 )
 ;
 OfflineTest
 .
-teardown
+ok
 (
+foreign1cache
+"
+foreign2
+.
+html
+chosen
+from
+foreign1
+cache
+"
 )
 ;
 OfflineTest
 .
-finish
+is
 (
+foreign1cache
+.
+groupID
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign1
+.
+cacheManifest
+"
 )
+window
+.
+location
+=
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+tests
+/
+mochitest
+/
+ajax
+/
+offline
+/
+foreign2
+.
+html
+"
 ;
 }
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
 if
 (
 OfflineTest
@@ -339,20 +456,9 @@ setup
 )
 )
 {
-/
-/
-Don
-'
-t
-expect
-a
-bunch
-of
-events
-.
 applicationCache
 .
-ondownloading
+onerror
 =
 OfflineTest
 .
@@ -368,14 +474,6 @@ failEvent
 ;
 applicationCache
 .
-oncached
-=
-OfflineTest
-.
-failEvent
-;
-applicationCache
-.
 onnoupdate
 =
 OfflineTest
@@ -384,58 +482,16 @@ failEvent
 ;
 applicationCache
 .
-onprogress
-=
-OfflineTest
-.
-failEvent
-;
-/
-/
-.
-.
-.
-but
-expect
-'
-checking
-'
-and
-'
-error
-'
-applicationCache
-.
-onchecking
-=
-function
-(
-)
-{
-gGotChecking
-=
-true
-;
-}
-;
-applicationCache
-.
-onerror
+oncached
 =
 OfflineTest
 .
 priv
 (
-handleError
+manifestUpdated
 )
 ;
 }
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
 <
 /
 script
