--- a/dom/tests/mochitest/ajax/offline/test_missingFile.html
+++ b/dom/tests/mochitest/ajax/offline/test_missingFile.html
@@ -144,6 +144,34 @@ js
 script
 >
 <
+link
+rel
+=
+"
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+tests
+/
+SimpleTest
+/
+test
+.
+css
+"
+/
+>
+<
 script
 type
 =
