--- a/dom/tests/mochitest/ajax/offline/test_refetchManifest.html
+++ b/dom/tests/mochitest/ajax/offline/test_refetchManifest.html
@@ -51,7 +51,7 @@ head
 <
 title
 >
-changing
+refetch
 manifest
 test
 <
@@ -143,34 +143,6 @@ js
 script
 >
 <
-link
-rel
-=
-"
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
->
-<
 script
 type
 =
@@ -180,79 +152,6 @@ text
 javascript
 "
 >
-var
-gGotChecking
-=
-false
-;
-var
-gGotDownloading
-=
-false
-;
-var
-g1SecUrl
-=
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-ajax
-/
-offline
-/
-changing1Sec
-.
-sjs
-"
-;
-var
-g1HourUrl
-=
-"
-http
-:
-/
-/
-localhost
-:
-8888
-/
-tests
-/
-dom
-/
-tests
-/
-mochitest
-/
-ajax
-/
-offline
-/
-changing1Hour
-.
-sjs
-"
-;
-var
-gCacheContents
-=
-null
-;
 function
 finish
 (
@@ -312,163 +211,6 @@ finish
 ;
 }
 function
-manifestUpdatedAgain
-(
-)
-{
-OfflineTest
-.
-ok
-(
-gGotChecking
-"
-Should
-get
-a
-checking
-event
-on
-the
-second
-update
-"
-)
-;
-OfflineTest
-.
-ok
-(
-gGotDownloading
-"
-Should
-get
-a
-downloading
-event
-on
-the
-second
-update
-"
-)
-;
-/
-/
-Get
-the
-initial
-contents
-of
-the
-first
-two
-files
-.
-fetcher
-=
-new
-OfflineCacheContents
-(
-[
-g1SecUrl
-g1HourUrl
-]
-)
-;
-fetcher
-.
-fetch
-(
-function
-(
-contents
-)
-{
-/
-/
-Make
-sure
-the
-contents
-of
-the
-1
--
-second
--
-expiration
-file
-have
-changed
-/
-/
-but
-that
-the
-1
--
-hour
--
-expiration
-has
-not
-.
-OfflineTest
-.
-isnot
-(
-gCacheContents
-[
-g1SecUrl
-]
-contents
-[
-g1SecUrl
-]
-"
-1
--
-second
-expiration
-should
-have
-changed
-"
-)
-;
-OfflineTest
-.
-is
-(
-gCacheContents
-[
-g1HourUrl
-]
-contents
-[
-g1HourUrl
-]
-"
-1
--
-hour
-expiration
-should
-not
-have
-changed
-"
-)
-;
-finish
-(
-)
-;
-}
-)
-;
-}
-function
 failAndFinish
 (
 e
@@ -500,34 +242,6 @@ manifestUpdated
 (
 )
 {
-OfflineTest
-.
-ok
-(
-gGotChecking
-"
-Should
-get
-a
-checking
-event
-"
-)
-;
-OfflineTest
-.
-ok
-(
-gGotDownloading
-"
-Should
-get
-a
-downloading
-event
-"
-)
-;
 /
 /
 Replace
@@ -574,82 +288,6 @@ the
 cached
 manifest
 .
-var
-req
-=
-new
-XMLHttpRequest
-(
-)
-;
-req
-.
-open
-(
-"
-PUT
-"
-"
-changingManifest
-.
-cacheManifest
-"
-false
-)
-;
-req
-.
-setRequestHeader
-(
-"
-Content
--
-Type
-"
-"
-text
-/
-cache
--
-manifest
-"
-)
-;
-req
-.
-send
-(
-"
-CACHE
-MANIFEST
-\
-n
-"
-+
-"
-#
-v2
-\
-n
-"
-+
-"
-changing1Hour
-.
-sjs
-\
-n
-"
-+
-"
-changing1Sec
-.
-sjs
-\
-n
-"
-)
-;
 /
 /
 Get
@@ -787,6 +425,188 @@ update
 )
 ;
 }
+function
+replaceManifest
+(
+)
+{
+/
+/
+If
+we
+replace
+the
+manifest
+after
+a
+downloading
+event
+the
+update
+/
+/
+should
+fail
+when
+it
+revalidates
+the
+manifest
+at
+the
+end
+of
+the
+update
+.
+var
+req
+=
+new
+XMLHttpRequest
+(
+)
+;
+req
+.
+open
+(
+"
+PUT
+"
+"
+changingManifest
+.
+cacheManifest
+"
+false
+)
+;
+req
+.
+setRequestHeader
+(
+"
+Content
+-
+Type
+"
+"
+text
+/
+cache
+-
+manifest
+"
+)
+;
+req
+.
+send
+(
+"
+CACHE
+MANIFEST
+\
+n
+"
++
+"
+#
+v2
+\
+n
+"
++
+"
+changing1Hour
+.
+sjs
+\
+n
+"
++
+"
+changing1Sec
+.
+sjs
+\
+n
+"
+)
+;
+}
+function
+cached
+(
+)
+{
+OfflineTest
+.
+ok
+(
+true
+"
+Got
+the
+expected
+cached
+event
+.
+"
+)
+;
+finish
+(
+)
+;
+}
+function
+gotError
+(
+)
+{
+OfflineTest
+.
+ok
+(
+true
+"
+Got
+the
+expected
+error
+event
+.
+"
+)
+;
+/
+/
+Now
+this
+update
+will
+be
+rescheduled
+and
+it
+should
+succeed
+.
+applicationCache
+.
+onerror
+=
+failAndFinish
+;
+applicationCache
+.
+oncached
+=
+cached
+;
+}
 if
 (
 OfflineTest
@@ -800,7 +620,7 @@ applicationCache
 .
 onerror
 =
-failAndFinish
+gotError
 ;
 applicationCache
 .
@@ -810,42 +630,15 @@ failAndFinish
 ;
 applicationCache
 .
-onchecking
-=
-function
-(
-)
-{
-gGotChecking
-=
-true
-;
-}
-;
-applicationCache
-.
 ondownloading
 =
-function
-(
-)
-{
-gGotDownloading
-=
-true
-;
-}
+replaceManifest
 ;
 applicationCache
 .
 oncached
 =
-OfflineTest
-.
-priv
-(
-manifestUpdated
-)
+failAndFinish
 ;
 }
 SimpleTest
