Bug 460353: app caches should be per iframe, not per toplevel browsing context.  r=dcamp, r+sr=jst
UltraBlame original commit: bfaeea708b98cd7c9b727c3379c1b7a74c64a222

--- a/dom/tests/mochitest/ajax/offline/foreign2.html
+++ b/dom/tests/mochitest/ajax/offline/foreign2.html
@@ -267,7 +267,7 @@ Foreign
 2
 cache
 present
-choosed
+chosen
 for
 foreign2
 .
@@ -552,7 +552,7 @@ foreign2
 .
 html
 not
-choosed
+chosen
 from
 foreign1
 cache
