Bug 463929. Support 8-bit WAV streams. r+sr=roc
UltraBlame original commit: 7d06dac3fe83ee23adf6c319fdaea9ceea59292d

--- a/content/media/video/test/test_wav_8bit.html
+++ b/content/media/video/test/test_wav_8bit.html
@@ -16,7 +16,11 @@ Wave
 Media
 test
 :
-ended
+8
+-
+bit
+sample
+format
 <
 /
 title
@@ -146,7 +150,7 @@ wav
 src
 =
 '
-r11025_s16_c1
+r11025_u8_c1
 .
 wav
 '
