Bug 464567: test_obsolete.html breaking future offline tests.  r+sr+a=vlad
UltraBlame original commit: a090dac49be0a1eea08c56f3ca947c29c4f1de52

--- a/dom/tests/mochitest/ajax/offline/test_obsolete.html
+++ b/dom/tests/mochitest/ajax/offline/test_obsolete.html
@@ -322,6 +322,33 @@ finish
 (
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+pm
+.
+remove
+(
+uri
+.
+asciiHost
+"
+offline
+-
+app
+"
+)
+;
 gTestWin
 .
 close
