Bug 460063 - Test case fixes for Geolocation prompt should not appear if there are no providers installed
UltraBlame original commit: d21ca3cce0ec8a020152f9d36393d09dd987c92a

--- a/dom/tests/mochitest/geolocation/test_allowWatch.html
+++ b/dom/tests/mochitest/geolocation/test_allowWatch.html
@@ -280,6 +280,42 @@ Array
 numCallbacks
 )
 ;
+function
+failureCallback
+(
+error
+)
+{
+ok
+(
+error
+.
+code
+=
+=
+2
+"
+Failure
+was
+something
+other
+than
+position
+unavailable
+"
+)
+;
+removePrompt
+(
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 /
 /
 define
@@ -386,7 +422,7 @@ successCallback
 i
 +
 "
-null
+failureCallback
 null
 )
 ;
