--- a/dom/tests/mochitest/geolocation/test_clearWatch.html
+++ b/dom/tests/mochitest/geolocation/test_clearWatch.html
@@ -282,6 +282,42 @@ Array
 numCallbacks
 )
 ;
+function
+failureCallback
+(
+error
+)
+{
+ok
+(
+error
+.
+code
+=
+=
+2
+"
+Failure
+was
+something
+other
+than
+position
+unavailable
+"
+)
+;
+removePrompt
+(
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 /
 /
 define
@@ -388,7 +424,7 @@ successCallback
 i
 +
 "
-null
+failureCallback
 null
 )
 ;
