Bug 445004 followup: Use parent instead of top for tests.  r=roc
UltraBlame original commit: cbd14041ff7d544b2f28525bc26b7cbd623470be

--- a/content/base/test/bug298064-subframe.html
+++ b/content/base/test/bug298064-subframe.html
@@ -25,7 +25,7 @@ Option
 (
 )
 ;
-top
+parent
 .
 is
 (
@@ -50,7 +50,7 @@ Image
 (
 )
 ;
-top
+parent
 .
 is
 (
@@ -71,27 +71,27 @@ image
 bar
 =
 new
-top
+parent
 .
 Option
 (
 )
 ;
-top
+parent
 .
 is
 (
 bar
 .
 ownerDocument
-top
+parent
 .
 document
 "
 Unexpected
 document
 for
-top
+parent
 new
 option
 "
@@ -100,37 +100,37 @@ option
 bar
 =
 new
-top
+parent
 .
 Image
 (
 )
 ;
-top
+parent
 .
 is
 (
 bar
 .
 ownerDocument
-top
+parent
 .
 document
 "
 Unexpected
 document
 for
-top
+parent
 new
 image
 "
 )
 ;
-top
+parent
 .
 isnot
 (
-top
+parent
 .
 document
 document
