Bug 460425.  Do better security checks during redirection.  r=sicking,biesi, sr=sicking
UltraBlame original commit: 5d1fbada858917573a87e817f732e7d4cc8559b3

--- a/content/xml/document/test/test_bug392338.html
+++ b/content/xml/document/test/test_bug392338.html
@@ -318,6 +318,12 @@ theTopic
 theData
 )
 {
+this
+.
+timeToFinish
+=
+true
+;
 try
 {
 this
@@ -360,24 +366,32 @@ notificationCallbacks
 if
 (
 !
-(
 ir
-instanceof
+)
+{
+this
+.
+timeToFinish
+=
+false
+;
+return
+;
+}
 this
 .
 window
 .
-Components
-.
-interfaces
-.
-nsIDOMDocument
+ok
+(
+true
+"
+No
+exception
+thrown
+"
 )
-)
-{
-return
 ;
-}
 this
 .
 window
@@ -405,6 +419,21 @@ requestor
 "
 )
 ;
+if
+(
+ir
+instanceof
+this
+.
+window
+.
+Components
+.
+interfaces
+.
+nsIClassInfo
+)
+{
 var
 count
 =
@@ -486,6 +515,7 @@ classinfo
 )
 ;
 }
+}
 catch
 (
 ex
@@ -510,6 +540,13 @@ ex
 }
 finally
 {
+if
+(
+this
+.
+timeToFinish
+)
+{
 this
 .
 remove
@@ -532,6 +569,7 @@ window
 =
 null
 ;
+}
 }
 }
 remove
