Bug 464994.  about:license and about:rights potentially contradict each other.  r=gerv, a=blocking-firefox3.1
UltraBlame original commit: 32213f0701efc3413530d52aee569bc7e493e55f

--- a/browser/base/content/overrides/app-license.html
+++ b/browser/base/content/overrides/app-license.html
@@ -1,11 +1,10 @@
 <
 p
 >
-Official
 <
 b
 >
-binaries
+Binaries
 <
 /
 b
@@ -13,7 +12,12 @@ b
 of
 this
 product
-released
+have
+been
+made
+available
+to
+you
 by
 the
 <
@@ -29,44 +33,35 @@ www
 .
 mozilla
 .
-com
+org
 /
 "
 >
 Mozilla
-Corporation
+Project
 <
 /
 a
 >
-are
-made
-available
 under
+the
+Mozilla
+Public
+License
+.
 <
 a
 href
 =
 "
-http
+about
 :
-/
-/
-www
-.
-mozilla
-.
-org
-/
-foundation
-/
-EULA
-/
+rights
 "
 >
-the
-corresponding
-EULA
+Know
+your
+rights
 <
 /
 a
