--- a/toolkit/content/license.html
+++ b/toolkit/content/license.html
@@ -893,43 +893,16 @@ correctme
 >
 #
 ifdef
-APP_EULA_BLOCK
+APP_LICENSE_BLOCK
 #
 includesubst
-APP_EULA_BLOCK
+APP_LICENSE_BLOCK
 #
 endif
 <
 p
 >
-Except
-as
-described
-<
-a
-id
-=
-"
-exceptions
--
-link
-"
-href
-=
-"
-about
-:
-license
-#
-exceptions
-"
->
-here
-<
-/
-a
->
-all
+All
 of
 the
 <
@@ -950,7 +923,7 @@ a
 href
 =
 "
-http
+https
 :
 /
 /
@@ -962,9 +935,11 @@ org
 /
 en
 /
-docs
-/
-Mozilla_Source_Code_Via_CVS
+Mozilla_Source_Code_
+%
+28Mercurial
+%
+29
 "
 >
 available
@@ -25482,150 +25457,6 @@ ul
 >
 <
 hr
->
-<
-h3
->
-<
-a
-name
-=
-"
-exceptions
-"
->
-<
-/
-a
->
-*
-Exceptions
-<
-/
-h3
->
-<
-p
-class
-=
-"
-correctme
-"
->
-Depending
-on
-how
-it
-was
-compiled
-your
-product
-distribution
-and
-version
-may
-include
-the
-following
-portions
-which
-are
-not
-available
-under
-the
-above
-terms
-:
-<
-/
-p
->
-<
-ul
->
-<
-li
->
-Image
-files
-containing
-the
-<
-a
-href
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-foundation
-/
-trademarks
-/
-policy
-.
-html
-"
->
-trademarks
-and
-logos
-<
-/
-a
->
-of
-the
-Mozilla
-Foundation
-which
-may
-not
-be
-reproduced
-without
-permission
-.
-(
-Copyright
-&
-copy
-;
-2004
--
-2008
-The
-Mozilla
-Foundation
-.
-All
-Rights
-Reserved
-.
-Some
-trademark
-rights
-are
-used
-under
-license
-from
-The
-Charlton
-Company
-.
-)
-<
-/
-ul
 >
 <
 p
