Bug 441974 - Several tests fail when running in conjunction with other mochitests, succeed when running stand-alone, patch=MarcoZ, r=me, a=beltzner
UltraBlame original commit: 136ac0be7eda451a07cb5d334e787ac641de3277

--- a/accessible/tests/mochitest/test_textattrs.html
+++ b/accessible/tests/mochitest/test_textattrs.html
@@ -520,7 +520,41 @@ misspelledAttrs
 22
 )
 ;
+if
+(
+navigator
+.
+platform
+=
+=
+"
+Win32
+"
+)
 is
+(
+gA11yEventObserver
+.
+mTextAttrChangedEventCounter
+2
+"
+Wrong
+count
+of
+'
+text
+attribute
+changed
+'
+events
+for
+"
++
+ID
+)
+;
+else
+todo
 (
 gA11yEventObserver
 .
