Bug 465141 - 'Workers: Implement expression flavor of timeouts, use nsAutoJSValHolder.' r+sr=jst, a=blocking1.9.1+
UltraBlame original commit: 9d35d79ab1e9a3fa61e2a05f28d2ef6682695e6c

--- a/dom/src/threads/test/test_threadTimeouts.html
+++ b/dom/src/threads/test/test_threadTimeouts.html
@@ -296,6 +296,22 @@ case
 intervalCanceled
 "
 :
+worker
+.
+postMessage
+(
+"
+startExpression
+"
+)
+;
+break
+;
+case
+"
+expressionFinished
+"
+:
 SimpleTest
 .
 finish
