Bug 466256 - 'Workers: Prevent cross-site workers and properly resolve relative URIs.' r+sr=jst, a=blocking1.9.1+.
UltraBlame original commit: 2f6b84f2e48c6bef1834ffb9b40c0e6bcf0471f6

--- a/dom/src/threads/test/test_relativeLoad.html
+++ b/dom/src/threads/test/test_relativeLoad.html
@@ -15,6 +15,8 @@ of
 DOM
 Worker
 Threads
+relative
+load
 -
 -
 >
@@ -29,7 +31,6 @@ for
 DOM
 Worker
 Threads
-Recursion
 <
 /
 title
@@ -120,37 +121,6 @@ head
 body
 >
 <
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
->
-<
-div
-id
-=
-"
-content
-"
-style
-=
-"
-display
-:
-none
-"
->
-<
-/
-div
->
-<
 pre
 id
 =
@@ -174,17 +144,100 @@ javascript
 "
 >
 var
+index
+=
+-
+1
+;
+var
+urls
+=
+[
+"
+relativeLoad_worker
+.
+js
+"
+"
+subdir
+/
+relativeLoad_sub_worker
+.
+js
+"
+]
+;
+function
+messageHandler
+(
+event
+)
+{
+if
+(
+index
+>
+=
+0
+)
+{
+is
+(
+event
+.
+data
+urls
+[
+index
+]
+"
+Bad
+url
+!
+"
+)
+;
+if
+(
+index
+=
+=
+urls
+.
+length
+-
+1
+)
+{
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
+}
+var
 worker
 =
 new
 Worker
 (
-"
-recursion_worker
-.
-js
-"
+urls
+[
++
++
+index
+]
 )
+;
+worker
+.
+onmessage
+=
+messageHandler
 ;
 worker
 .
@@ -195,56 +248,20 @@ function
 event
 )
 {
-is
+ok
 (
+false
+"
+Worker
+had
+an
+error
+:
+"
++
 event
 .
 data
-'
-[
-JavaScript
-Error
-:
-"
-too
-much
-recursion
-"
-{
-file
-:
-"
-http
-:
-/
-/
-localhost
-:
-8888
-'
-+
-'
-/
-tests
-/
-dom
-/
-src
-/
-threads
-/
-test
-/
-recursion_worker
-.
-js
-"
-line
-:
-2
-}
-]
-'
 )
 ;
 SimpleTest
@@ -254,6 +271,7 @@ finish
 )
 ;
 }
+;
 worker
 .
 postMessage
@@ -261,6 +279,11 @@ postMessage
 "
 start
 "
+)
+;
+}
+messageHandler
+(
 )
 ;
 SimpleTest
