--- a/dom/src/threads/test/test_json.html
+++ b/dom/src/threads/test/test_json.html
@@ -14,12 +14,8 @@ Tests
 of
 DOM
 Worker
-Threads
-XHR
-(
-Bug
-450452
-)
+JSON
+messages
 -
 -
 >
@@ -33,12 +29,7 @@ Test
 for
 DOM
 Worker
-Threads
-XHR
-(
-Bug
-450452
-)
+Navigator
 <
 /
 title
@@ -129,47 +120,6 @@ head
 body
 >
 <
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-450452
-"
->
-DOM
-Worker
-Threads
-XHR
-(
-Bug
-450452
-)
-<
-/
-a
->
-<
 p
 id
 =
@@ -210,17 +160,17 @@ test
 >
 <
 script
+src
+=
+"
+json_worker
+.
+js
+"
 language
 =
 "
 javascript
-"
-src
-=
-"
-xhrAbort_worker
-.
-js
 "
 >
 <
@@ -240,12 +190,20 @@ language
 javascript
 "
 >
-function
-postMessage
+ok
 (
-data
+messages
+.
+length
+"
+No
+messages
+to
+test
+!
+"
 )
-{
+;
 var
 worker
 =
@@ -253,11 +211,16 @@ new
 Worker
 (
 "
-xhrAbort_worker
+json_worker
 .
 js
 "
 )
+;
+var
+index
+=
+0
 ;
 worker
 .
@@ -268,24 +231,191 @@ function
 event
 )
 {
+var
+key
+=
+messages
+[
+index
++
++
+]
+;
+/
+/
+Loop
+for
+the
+ones
+we
+shouldn
+'
+t
+receive
+.
+while
+(
+key
+.
+exception
+)
+{
+key
+=
+messages
+[
+index
++
++
+]
+;
+}
 is
 (
-data
-.
-toString
-(
-)
+typeof
 event
 .
 data
+key
 .
-toString
-(
-)
+type
 "
-Got
-different
-results
+Bad
+type
+!
+"
++
+messages
+.
+indexOf
+(
+key
+)
+)
+;
+is
+(
+event
+.
+data
+instanceof
+Array
+key
+.
+array
+"
+Array
+mismatch
+!
+"
++
+messages
+.
+indexOf
+(
+key
+)
+)
+;
+if
+(
+key
+.
+shouldCompare
+)
+{
+ok
+(
+event
+.
+data
+=
+=
+key
+.
+compareValue
+"
+Values
+don
+'
+t
+compare
+!
+"
++
+messages
+.
+indexOf
+(
+key
+)
+)
+;
+}
+if
+(
+key
+.
+shouldEqual
+)
+{
+ok
+(
+event
+.
+data
+=
+=
+=
+key
+.
+compareValue
+"
+Values
+don
+'
+t
+equal
+!
+"
++
+messages
+.
+indexOf
+(
+key
+)
+)
+;
+}
+if
+(
+event
+.
+data
+=
+=
+"
+testFinished
+"
+)
+{
+is
+(
+index
+messages
+.
+length
+"
+Didn
+'
+t
+see
+the
+right
+number
+of
+messages
 !
 "
 )
@@ -296,6 +426,7 @@ finish
 (
 )
 ;
+}
 }
 ;
 worker
@@ -337,11 +468,6 @@ postMessage
 "
 start
 "
-)
-;
-}
-runTest
-(
 )
 ;
 SimpleTest
