Bug 458847 - colordepth.html TEST-UNEXPECTED-FAIL on my Windows 2000: 24<->32 bit colors mismatch; (Av2a) Allow higher values, on all platforms; r=dbaron
UltraBlame original commit: 90f89770b9b69551063c9688d98cec278a2f5da5

--- a/modules/libpr0n/test/reftest/colordepth.html
+++ b/modules/libpr0n/test/reftest/colordepth.html
@@ -38,35 +38,32 @@ and
 will
 fail
 .
+*
 The
 Windows
 test
 boxes
+used
+to
 have
 a
-tendancy
+tendency
 to
 flip
 to
-*
 16
 -
 bit
 color
 mode
-(
-see
-bug
-414720
-)
+*
 so
 this
 test
 will
-explicit
+explicitly
 check
 the
-*
 color
 depth
 to
@@ -74,10 +71,39 @@ make
 it
 more
 obvious
+*
 when
-that
-happens
+the
+requirement
+is
+not
+met
 .
+(
+See
+bug
+414720
+.
+)
+*
+24
+-
+bit
+is
+only
+a
+minimum
+allow
+higher
+values
+too
+.
+(
+See
+bug
+458847
+.
+)
 *
 /
 var
@@ -92,8 +118,7 @@ colorDepth
 if
 (
 colorDepth
-!
-=
+<
 24
 )
 document
@@ -106,6 +131,7 @@ ERROR
 color
 depth
 is
+only
 "
 +
 colorDepth
