Bug 465573 - Add mochitests for ElementTraversal; r+sr=jonas
UltraBlame original commit: a5071bef601d99db47b2b5df20e485a924d3fa94

--- a/content/base/test/test_elementTraversal.html
+++ b/content/base/test/test_elementTraversal.html
@@ -307,7 +307,7 @@ cc
 =
 c
 .
-mozChildElements
+children
 ;
 var
 contents
@@ -379,7 +379,7 @@ is
 e
 c
 .
-mozChildElements
+children
 [
 i
 ]
@@ -394,7 +394,7 @@ is
 e
 c
 .
-mozChildElements
+children
 .
 item
 (
@@ -442,7 +442,7 @@ is
 i
 c
 .
-mozChildElements
+children
 .
 length
 "
@@ -517,7 +517,7 @@ is
 e
 c
 .
-mozChildElements
+children
 [
 i
 ]
@@ -532,7 +532,7 @@ is
 e
 c
 .
-mozChildElements
+children
 .
 item
 (
