Bug 467055 - move name calculated from tooltip code to GetName, r=davidb, marcoz
UltraBlame original commit: e51b963dcc880997438c49e0948d8956e6098c6b

--- a/accessible/tests/mochitest/test_nsIAccessible_name_button.html
+++ b/accessible/tests/mochitest/test_nsIAccessible_name_button.html
@@ -365,14 +365,14 @@ label
 html
 :
 input
-title
+value
 testName
 (
 "
-input_title
+input_value0
 "
 "
-title
+1
 "
 )
 ;
@@ -437,6 +437,22 @@ input_data
 "
 "
 data
+"
+)
+;
+/
+/
+html
+:
+input
+title
+testName
+(
+"
+input_title
+"
+"
+title
 "
 )
 ;
@@ -990,10 +1006,10 @@ title
 -
 name
 from
-title
+value
 prefered
 to
-value
+title
 -
 -
 >
@@ -1007,7 +1023,7 @@ button
 id
 =
 "
-input_title
+input_value0
 "
 title
 =
@@ -1158,6 +1174,35 @@ data
 =
 "
 data
+"
+/
+>
+<
+!
+-
+-
+name
+from
+title
+-
+-
+>
+<
+input
+type
+=
+"
+button
+"
+id
+=
+"
+input_title
+"
+title
+=
+"
+title
 "
 /
 >
