Bug 463042 - Smooth scrolling isn't working with the scrollbar or the keyboard arrows, r+sr=roc
UltraBlame original commit: cfc55393803860743252aeac3bf1b2cd87491d55

--- a/docshell/test/navigation/test_bug430723.html
+++ b/docshell/test/navigation/test_bug430723.html
@@ -731,6 +731,12 @@ UP
 testWindow
 )
 ;
+setTimeout
+(
+function
+(
+)
+{
 is
 (
 testWindow
@@ -777,6 +783,10 @@ testWindow
 location
 =
 gTallBlueBoxURI
+;
+}
+0
+)
 ;
 }
 var
@@ -862,6 +872,12 @@ DOWN
 testWindow
 )
 ;
+setTimeout
+(
+function
+(
+)
+{
 isnot
 (
 testWindow
@@ -899,6 +915,10 @@ history
 .
 back
 (
+)
+;
+}
+0
 )
 ;
 }
@@ -972,6 +992,12 @@ DOWN
 testWindow
 )
 ;
+setTimeout
+(
+function
+(
+)
+{
 isnot
 (
 testWindow
@@ -1006,6 +1032,10 @@ SimpleTest
 .
 finish
 (
+)
+;
+}
+0
 )
 ;
 }
