Bug 466493 Implement PositionOptions::maximumAge. r/sr=jst Bug 466494 Make geolocation mochitest use PositionError named values. r/sr=jst
UltraBlame original commit: c170d14afd6021e9fd6b694560230a26ae1df7ab

--- a/dom/tests/mochitest/geolocation/test_timeoutWatch.html
+++ b/dom/tests/mochitest/geolocation/test_timeoutWatch.html
@@ -347,7 +347,9 @@ err
 code
 =
 =
-2
+err
+.
+POSITION_UNAVAILABLE
 )
 {
 /
@@ -376,7 +378,9 @@ err
 code
 =
 =
-4
+err
+.
+TIMEOUT
 "
 ensure
 error
