--- a/content/events/test/test_bug457672.html
+++ b/content/events/test/test_bug457672.html
@@ -230,6 +230,112 @@ windowBlurCount
 0
 ;
 function
+setUserPref
+(
+reset
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+const
+prefSvcContractID
+=
+"
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+"
+;
+const
+prefSvcIID
+=
+Components
+.
+interfaces
+.
+nsIPrefService
+;
+var
+prefs
+=
+Components
+.
+classes
+[
+prefSvcContractID
+]
+.
+getService
+(
+prefSvcIID
+)
+.
+getBranch
+(
+"
+browser
+.
+link
+.
+"
+)
+;
+if
+(
+reset
+)
+{
+try
+{
+prefs
+.
+clearUserPref
+(
+"
+open_newwindow
+"
+)
+;
+}
+catch
+(
+ex
+)
+{
+}
+}
+else
+{
+prefs
+.
+setIntPref
+(
+"
+open_newwindow
+"
+3
+)
+;
+}
+}
+function
 listener
 (
 evt
@@ -266,6 +372,28 @@ tab
 !
 "
 )
+;
+setUserPref
+(
+true
+)
+;
+document
+.
+getElementsByTagName
+(
+"
+a
+"
+)
+[
+0
+]
+.
+focus
+(
+)
+;
 SimpleTest
 .
 finish
@@ -326,7 +454,22 @@ startTest
 (
 )
 {
-window
+setUserPref
+(
+false
+)
+;
+document
+.
+getElementsByTagName
+(
+"
+a
+"
+)
+[
+0
+]
 .
 focus
 (
